--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Oliver Wang</span></h1>
 			            <h2 class="mb-4">An Aspiring Software Developer</h2>
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+<!-- 			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p> -->
+			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> </p>
 		            </div>
 		          </div>
 	        	</div>
@@ -78,7 +79,8 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm a <span>Computer Science Student</span> based in New York City</h1>
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+<!-- 			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p> -->
+			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -340,6 +342,17 @@
 							</div>
 						</div>
 					</div>
+					<div class="col-md-6 animate-box">
+						<div class="progress-wrap ftco-animate">
+							<h3>Apache Impala</h3>
+							<div class="progress">
+							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
+							  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
+							    <span>80%</span>
+							  	</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -560,7 +573,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://1234567920">+1 (917) 426-7444‬</a></p>
+	            <p><a href="tel://+1 9174267444‬">+1 (917) 426-7444‬</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -569,7 +582,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">OliverWang1400@gmail.com</a></p>
+	            <p><a href="mailto:OliverWang1400@gmail.com">OliverWang1400@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
