--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			            <h1 class="mb-4 mt-3">I'm <span>Oliver Wang</span></h1>
 			            <h2 class="mb-4">An Aspiring Software Developer and Data Engineer</h2>
 <!-- 			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p> -->
-			            <p><a href="documents/oliver_resume.pdf" class="btn btn-primary py-3 px-4" download>Download Resume</a> </p>
+			            <p><a href="documents/oliver_wang_resume.pdf" class="btn btn-primary py-3 px-4" download>Download Resume</a> </p>
 		            </div>
 		          </div>
 	        	</div>
@@ -80,7 +80,7 @@
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm a <span>Computer Science Student</span> based in New York City</h1>
 <!-- 			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p> -->
-			            <p><a href="documents/oliver_resume.pdf" class="btn btn-primary py-3 px-4" download>Download Resume</a></p>
+			            <p><a href="documents/oliver_wang_resume.pdf" class="btn btn-primary py-3 px-4" download>Download Resume</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -110,7 +110,7 @@
 <!-- 		            	<li class="d-flex"><span>Date of birth:</span> <span>January 01, 1987</span></li> -->
 		            	<li class="d-flex"><span>Address:</span> <span>New York, NY</span></li>
 <!-- 		            	<li class="d-flex"><span>Zip code:</span> <span>1000</span></li> -->
-		            	<li class="d-flex"><span>Email:</span> <span>zw1400@nyu.edu</span></li>
+		            	<li class="d-flex"><span>Email:</span> <span>o.wang@nyu.edu</span></li>
 <!-- 		            	<li class="d-flex"><span>Phone: </span> <span>+1-2234-5678-9-0</span></li> -->
 		            </ul>
 		          </div>
@@ -121,7 +121,7 @@
 	                <span class="" data-number="3">3</span>
 	                <span>Project complete</span>
                 </p>
-                <p><a href="documents/oliver_resume.pdf" class="btn btn-primary py-3 px-3" download>Download Resume</a></p>
+                <p><a href="documents/oliver_wang_resume.pdf" class="btn btn-primary py-3 px-3" download>Download Resume</a></p>
               </div>
 	          </div>
 	        </div>
@@ -610,7 +610,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:OliverWang1400@gmail.com">zw1400@nyu.edu</a></p>
+	            <p><a href="mailto:o.wang@nyu.edu">o.wang@nyu.edu</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -679,7 +679,7 @@
 	              <ul>
 <!-- 	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li> -->
 <!-- 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li> -->
-	                <li><span class="icon icon-envelope"></span><span class="text">zw1400@nyu.edu</span></li>
+	                <li><span class="icon icon-envelope"></span><span class="text">o.wang@nyu.edu</span></li>
 	              </ul>
 	            </div>
             </div>
