--- a/index.html
+++ b/index.html
@@ -409,6 +409,15 @@
           </div>
         </div>
     		<div class="row">
+			<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(documents/edtech.png);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="https://edtech-wishlist.herokuapp.com/">EdTech Wishlist</a></h3>
+	    					<span>Django, Python</span>
+	    				</div>
+    				</div>
+  				</div>
     			<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(documents/trump_proj.png);">
     					<div class="overlay"></div>
@@ -663,7 +672,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>Computer Science student based in New York City <br/> Aspiring Software Developer and Data Engineer</p>
+              <p>Computer Science student based in New York City <br/> Aspiring Software Developer</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://twitter.com/anonymousollie"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.linkedin.com/in/oliver-z-wang/"><span class="icon-linkedin"></span></a></li>
