--- a/index.html
+++ b/index.html
@@ -141,6 +141,16 @@
     		<div class="row">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
+    					<span class="date"> Jan 2021 - May 2022</span>
+    					<h2>M.S. in Computer Science</h2>
+    					<span class="position">New York University</span>
+    					<p class="mt-4">Accelerated BA-MS Track
+    						<br/>Relevant Coursework: Compiler Construction, Data Communication and Networks, Real-time Big Data Analytics, Database Systems</p>
+    				</div>
+
+    			</div>
+    			<div class="col-md-6">
+    				<div class="resume-wrap ftco-animate">
     					<span class="date">May 2017 - Jan 2020</span>
     					<h2>B.A. in Computer Science</h2>
     					<span class="position">New York University</span>
@@ -157,33 +167,7 @@
     				</div> -->
     			</div>
 
-    			<div class="col-md-6">
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date"> Jan 2021 - May 2022</span>
-    					<h2>M.S. in Computer Science</h2>
-    					<span class="position">New York University</span>
-    					<p class="mt-4">Accelerated BA-MS Track
-    						<br/>Relevant Coursework: Real-time Big Data Analytics, Database Systems, Natural Language Processing, Programming Languages</p>
-    				</div>
-<!--     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Art &amp; Lorem Ipsum</h2>
-    					<span class="position">Lorem Ipsum</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">Lorem Ipsum</span>
-    					<h2>Lorem Ipsum</h2>
-    					<span class="position">Lorem Ipsum</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">2017-2018</span>
-    					<h2>Lorem Ipsum</h2>
-    					<span class="position">Lorem Ipsum</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div> -->
-    			</div>
+    			
     		</div>
 <!--     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
