delete proj count

--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
-              	<p class="mb-4">
+<!--               	<p class="mb-4">
 	                <span class="" data-number="6">6</span>
 	                <span>Project complete</span>
-                </p>
+                </p> -->
                 <p><a href="documents/oliver_wang_resume.pdf" class="btn btn-primary py-3 px-3" download>Download Resume</a></p>
               </div>
 	          </div>
