--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Oliver Wang</span></h1>
-			            <h2 class="mb-4">An Aspiring Software Engineer</h2>
+			            <h2 class="mb-4">Backend Engineering Intern at <a href="https://sysdig.com/">Sysdig</a></h2>
 <!-- 			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p> -->
 			            <p><a href="documents/oliver_wang_resume.pdf" class="btn btn-primary py-3 px-4" download>Download Resume</a> </p>
 		            </div>
